[package]
name = "rfirebird"
version = "0.1.0"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2021"
description = "Provides a raw access to firebird database file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsfbclient-core = "0.17.0"
argopt = { version = "0.3.0", optional = true }
tabled = { version = "0.8.0", optional = true }

[features]
default = ["cli"]
cli = ["dep:argopt", "dep:tabled"]

[[bin]]
name = "rfirebird"
required-features = ["cli"]

[lib]
name = "rfirebird"
crate-type = ["lib"]