[package]
name = "rfirebird"
version = "0.1.0"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2021"
description = "Provide a raw access to firebird database file"
repository = "https://github.com/fernandobatels/rfirebird"
keywords = ["firebird", "fbclient", "parse"]
categories = ["database"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argopt = { version = "0.3.0", optional = true }
tabled = { version = "0.8.0", optional = true }
byteorder = "1.4.3"
num_enum = "0.5.7"
thiserror = "1.0.24"

[features]
default = ["cli"]
cli = ["dep:argopt", "dep:tabled"]

[[bin]]
name = "rfirebird"
required-features = ["cli"]

[lib]
name = "rfirebird"
crate-type = ["lib"]